ServiceWorker: Avoid specific error handling from DidCloseWorkerGlobalScope()

ServiceWorkerGlobalScopeProxy::DidCloseWorkerGlobalScope() is called after
WorkerGlobalScope::close() to report the event somewhere. close() is a common
way to stop worker global scope, so its report function should also be common.
Otherwise, it's difficult to use close() for general purposes.

For that, this CL avoids error handling specific to failures on loading installed
scripts from DidCloseWorkerGlobalScope().

Change-Id: Icd36425f33727c0ea703471a7b376e33e9663784
Bug: 900429
Reviewed-on: https://chromium-review.googlesource.com/c/1309558
Commit-Queue: Hiroki Nakagawa <nhiroki@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604536}
Former-commit-id: 0fa1b4bbf82bfb9920b68b8077678084fd31ea5a