third_party/blink/renderer/modules/service_worker/service_worker_global_scope.cc
@@ -155,6 +155,9 @@ void ServiceWorkerGlobalScope::EvaluateClassicScript(
     std::unique_ptr<InstalledScriptsManager::ScriptData> script_data =
         installed_scripts_manager->GetScriptData(script_url);
     if (!script_data) {
+      ReportingProxy().DidFailToLoadInstalledScript();
+      // This will eventually initiate worker thread termination. See
+      // ServiceWorkerGlobalScopeProxy::DidCloseWorkerGlobalScope() for details.
       close();
       return;
     }
